under wayland popup menus not appearing when tooltip visible before click
Steps to reproduce
- glade-previewer --filename templatedlg.ui
- hover over a combobox until tooltip appears
- now click combobox, it will depress, but the popup doesn't appear
Current behavior
Console output of "Tried to map a popup with a non-top most parent" Visually depressed combobox without menu
Expected outcome
That the menu appears.
Version information
gtk3-3.24.7templatedlg.ui