mapped tooltip before attempting to show a menu is a problem

under wayland, see https://gitlab.gnome.org/GNOME/gtk/issues/1785

Change-Id: I542fb9e81b49144508d5403b2d5ad68a10ed8afe
Reviewed-on: https://gerrit.libreoffice.org/69897
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>